# my_clinical_etl_code

./: .gitignore  README.md  mapping_functions.md  moh_v2_template.csv  moh_v3_template.csv  pyproject.toml  requirements-as-package.txt  requirements.txt  update_moh_template.sh
sample_inputs/generic_example/: manifest.yml  moh_template.csv  new_cohort.py
sample_inputs/redcap_example/: manifest.yml  raw_redcap.csv  redcap.py  redcap2moh.csv  split_redcap_data.py
src/clinical_ETL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/clinical_etl/: CSVConvert.py  completeness_table.py  create_test_mapping.py  generate_mapping_docs.py  generate_schema.py  genomicschema.py  mappings.py  mohschemav2.py  mohschemav3.py  schema.py  validate_coverage.py
tests/: manifest.yml  moh_diffs.txt  test2mohv2.csv  test2mohv3.csv  test_data_ingest.py  testmap.py
tests/raw_data/: Biomarker.csv  Comorbidity.csv  Donor.csv  Followup.csv  PrimaryDiagnosis.csv  Radiation.csv  Sample_Registration.csv  Specimen.csv  Surgery.csv  SystemicTherapy.csv  Treatment.csv
